[package]
name = "bomber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy-inspector-egui = "0.12.1"
benimator = {git = "https://github.com/jcornaz/benimator.git"}
bevy_ecs_tilemap = "0.7"
iyes_loopless = "0.7"

# 物理引擎
bevy_rapier2d = { version = "0.16", features = [ "simd-stable", "debug-render" ] }

anyhow = "1.0"